# mnemocards

./: .coveragerc  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  import_apkg.py  index.html  makefile  mkdocs.yaml  objects.inv  pylintrc  pyproject.toml  requirements.in  requirements.readthedocs.txt  requirements.txt  requirements_dev.in  requirements_dev.txt  set_deck_conf.py  setup.py  sitemap.xml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  cicd.yaml
apis/mnemocards/: index.html
apis/mnemocards_anki/: index.html
apis/mnemocards_essentials/: index.html
changelog/: index.html
contributing/: index.html
css/: language_cards.css
css/highlight/: .gitignore
doc/: conf.py  index.rst  installation.rst
doc/mep/: .gitignore  mep01.adoc  mep02.adoc  mep03.adoc  mep04.adoc
docker/: Dockerfile  makefile  run.sh
docs/: api.md  faq.md  index.md  macros.py
docs/apis/: mnemocards.md  mnemocards_anki.md  mnemocards_essentials.md
docs/css/: mnemocards.css
docs/eps/: ep00.md
docs/examples/: cards.md  custom_anki_note.md  index.md  markdown_card_fence.md  plugins.md  pronunciation.md
docs/include/: ep_header.md
docs/meps/: mep00.md  mep01.md  mep02.md  mep03.md  mep04.md
examples/: example.cards  index.html  regex.cards
examples/computer_science/: cards_config.json  cs.cards
examples/custom_anki_note/: README.md  aditivos.xml  index.html  mnemocards.yaml  plugin.py
examples/english/: cards_config.json  expressions.tsv
examples/gtrans_generated/: .gitignore
examples/gtrans_generated/from_tsv/: cards_config.json  ja_en.tsv
examples/gtrans_generated/from_words/: cards_config.json  words.txt
examples/japanese/: cards_config.json  hiragana.csv  hiragana.tsv  katakana.csv  katakana.tsv  mnemocards.yaml
examples/japanese_and_spanish/: mnemocards.yaml
examples/markdown_card_fence/: index.html
examples/markdown_cards/: cards_config.json  regex.cards
examples/plugins/: README.md  index.html  mnemocards.yaml  plugin.py  plugins.py
examples/pronunciation/: index.html
examples/spanish/: mnemocards.yaml  vocabulario.csv  vocabulary.csv
examples/vocab_generated/: .gitignore  cards_config.json
examples/vocab_generated/from_tsv/: cards_config.json
examples/vocab_generated/from_words/: cards_config.json
examples/vocabulary/: cards_config.json  hiragana.tsv  katakana.tsv  vocabulary.tsv
faq/: index.html
include/ep_header/: index.html
meps/mep00/: index.html
mnemocards/: __init__.py  __main__.py  __new_main__.py  _argument_parser.py  _version.py  auto_generate_tsv.py  autogenerate_deck.py  autogenerate_tsv.py  clean.py  generate.py  get_gists.py  gists.py  github.py  github_connector.py  import_command.py  main.py  maketsv.py  models.py  pull.py  push.py  settings.py  utils.py
mnemocards/any2dict/: __init__.py  any2dict.py  csv_reader.py  json_reader.py  reader.py  register.py  toml_reader.py  tsv_reader.py  xml_reader.py  yaml_reader.py
mnemocards/assets/css/: autogenerate.css  markdown_github.css  markdown_modest.css
mnemocards/assets/css/highlight/: github.css  makefile
mnemocards/builders/: __init__.py  autogenerate_builder.py  expression_builder.py  markdown_card_builder.py  vocabulary_builder.py
mnemocards/commands/: cook.py
mnemocards/css/: markdown_github.css
mymodule/: __init__.py  __main__.py  _argument_parser.py
search/: search_index.json
src/mnemocards/: __init__.py  __main__.py  cli.py  cook.py  readers.py  runner.py  settings.py  sinks.py  sources.py  task.py  transforms.py  types.py  utils.py  version.py
src/mnemocards_anki/: __init__.py  configure.py  models.py  package.py  pronounce.py  simple_vocabulary.py  utils.py  vocabulary.py  vocabulary_note_type.py
src/mnemocards_essentials/: __init__.py  append_to_property.py  directory.py  file.py  git.py  markdown_card_extension.py  pipeline.py  print.py  read_csv.py  read_json.py  read_toml.py  read_tsv.py  read_xml.py  read_yaml.py  readers.py  set_property.py  stats.py  union_pipeline.py
tags/: index.html
tests/: __init__.py  context.py  functional_testing.py  pytest.ini  test_markdown.py  test_readers.py  test_testing.py  test_tsv_config.tsv
tests/any2dict/: test_any2dict.py  test_csv_reader.py  test_json_reader.py  test_reader.py  test_register.py  test_toml_reader.py  test_tsv_reader.py  test_xml_reader.py  test_yaml_reader.py
tests/examples/: test_custom_anki_note.py  test_japanese.py  test_japanese_and_spanish.py  test_plugins.py  test_spanish.py
tests/mnemocards_essentials/: test_read_csv.py  test_read_json.py  test_read_toml.py  test_read_tsv.py  test_read_xml.py  test_read_yaml.py  test_readers.py
tests/test_card_folder/: cards_config.json  correct_tsv_file.tsv  ja_en.tsv  words.txt  words_japanese.txt
vim_syntax/: cards.vim
