[tool.poetry]
name = "mnemocards"
version = "0.1.5"
description = "Flashcards generator. You won't forget anything..."
license = "MIT"
authors = [
  "guiferviz <guiferviz@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/guiferviz/mnemocards"
keywords = [
  "anki",
  "cards",
  "flashcards",
  "memorization",
  "generator"
]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Education"
]


[tool.poetry.scripts]
mnemocards = 'mnemocards.__main__:main'


[tool.poetry.dependencies]
python = "^3.8"

# Guiferviz's genanki with support to deck configurations.
genanki-mnemocards = "^0.11.0"

gTTS = "^2.2.3"
iso-639 = "^0.4.5"
PyGithub = "^1.55"
markdown2 = "^2.4.1"
Pygments = "^2.10.0"
pykakasi = "^2.0.4"
googletrans = "3.1.0a0"
anki = "^2.1.33"
xmltodict = {version = "^0.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
PyYAML = {version = "^6.0", optional = true}
typer = "^0.4.0"
loguru = "^0.6.0"
pydantic = "^1.9.0"
emoji = "^1.7.0"


[tool.poetry.extras]
all = ["toml", "xmltodict", "PyYAML"]
toml = ["toml"]
xml = ["xmltodict"]
yaml = ["PyYAML"]


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pylint = "^2.6.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pyright = "^0.0.13"
black = "^22.1.0"
flake8-isort = "^4.1.1"
pre-commit = "^2.18.1"
mkdocs-material = "^8.2.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80


[tool.isort]
profile = "black"
